--- a/pipex/Makefile
+++ b/pipex/Makefile
@@ -6,7 +6,7 @@
 #    By: bvercaem <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/07/05 15:41:13 by bvercaem          #+#    #+#              #
-#    Updated: 2023/08/02 17:06:09 by bvercaem         ###   ########.fr        #
+#    Updated: 2023/08/04 13:45:37 by bvercaem         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -27,8 +27,8 @@ BONUS_HEADER_WD	=	./
 #-------------------COMPILATION----------------------
 
 CC				=	cc
-#FLAGS			=	-Wall -Wextra -Werror
-FLAGS			=	-Wall -Wextra -Werror -g
+FLAGS			=	-Wall -Wextra -Werror
+#FLAGS			=	-Wall -Wextra -Werror -g
 #FLAGS			=	-Wall -Wextra -Werror -fsanitize=address
 
 #-------------------SOURCES FILES----------------------
@@ -49,7 +49,7 @@ SRCS			=	$(SOURCES_WD)px_first_last_step.c \
 					$(SOURCES_WD)px_execution_utils.c \
 					$(SOURCES_WD)px_end.c
 
-BONUS_SRC		=	#$(BONUS_WD)___ _bonus.c
+BONUS_SRC		=	$(BONUS_WD)px_heredoc_bonus.c
 
 #-------------------OBJECTS----------------------
 
