--- a/libft/legacy/Makefile
+++ b/libft/legacy/Makefile
@@ -6,13 +6,15 @@
 #    By: bvercaem <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/10 14:06:55 by bvercaem          #+#    #+#              #
-#    Updated: 2023/07/18 17:43:19 by bvercaem         ###   ########.fr        #
+#    Updated: 2023/08/10 15:49:46 by bvercaem         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME			= legacy.tmp
 
 STATIC_NAME		= ../libft.a
+
+DISPLAY_NAME	= libft/legacy
 
 #-------------------PATH-----------------------------
 
@@ -99,26 +101,25 @@ BOLD			= 	\x1b[1m
 
 BOLD_OFF		=	\x1b[21m
 
-
 #-------------------RULES-----------------------
 
 all:	$(NAME)
 
 %.o: %.c
-	@printf "$(YELLOW)Generating $(NAME) objects... %-45.45s\r$(NO_COLOR)" $@
+	@printf "$(YELLOW)Generating $(DISPLAY_NAME) objects... %-45.45s\r$(NO_COLOR)" $@
 	@$(CC) $(FLAGS) $(I_HEADER) -c $< -o $@
 
 $(NAME):	$(OBJS)
 	@touch $(NAME)
-	@printf "$(GREEN)Linking $(NAME)... %45c\n$(NO_COLOR)" ' '
+	@printf "$(GREEN)Linking $(DISPLAY_NAME)... %45c\n$(NO_COLOR)" ' '
 	@ar -rcs $(STATIC_NAME) $(OBJS)
 
 clean:
-	@echo "$(RED)Deleting $(NAME) objects...$(NO_COLOR)"
+	@echo "$(RED)Deleting $(DISPLAY_NAME) objects...$(NO_COLOR)"
 	@rm -rf $(OBJS) $(NAME)
 
 fclean:	clean
-	@echo "$(RED)Deleting executables...$(NO_COLOR)"
+	@echo "$(RED)Deleting executable...$(NO_COLOR)"
 	@rm -f $(STATIC_NAME)
 
 re: fclean all
