so_long: got a window to open, but mlx generates a bunch of deprecation warnings..

--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -18,24 +18,21 @@ CC				=	cc
 FLAGS			=	-Wall -Wextra -Werror
 # FLAGS			=	-Wall -Wextra -Werror -g
 # FLAGS			=	-Wall -Wextra -Werror -fsanitize=address
-MLX_FLAG		=	-Imlx
+OPENGL_APPKIT	=	-framework OpenGL -framework AppKit
 
 #-------------------SOURCES FILES----------------------
 
-HEADERS			=	$(HEADER_WD)so_long.h
+HEADERS			=	$(HEADER_WD)so_long.h \
+					mlx/mlx.h \
+					libft/legacy/libft.h
 
 BONUS_HEADERS 	=
 
-H_LIB 			= 	$(___ _WD)___.h \
-					$(___ _WD)___.h
-
-MAIN			=	$(SOURCES_WD)main.c
+MAIN			=	$(SOURCES_WD)test.c
 
 BONUS_MAIN		=	$(BONUS_WD)main_bonus.c
 
-SRCS			=	$(SOURCES_WD)___.c \
-					$(SOURCES_WD)___.c \
-					$(SOURCES_WD)___.c \
+SRCS			=
 
 BONUS_SRC		=	$(BONUS_WD)___ _bonus.c
 
@@ -69,7 +66,6 @@ BOLD			= 	\x1b[1m
 
 BOLD_OFF		=	\x1b[21m
 
-
 #-------------------RULES-----------------------
 
 all:	$(NAME)
@@ -78,20 +74,20 @@ bonus:	$(BONUS_NAME)
 
 %.o: %.c
 	@printf "$(YELLOW)Generating $(NAME) objects... %-45.45s\r$(NO_COLOR)" $@
-	@$(CC) $(FLAGS) $(MLX_FLAG) $(I_HEADER) $(I_BONUS_HEADER) -c $< -o $@
+	@$(CC) $(FLAGS) $(I_HEADER) $(I_BONUS_HEADER) -c $< -o $@
 
 $(NAME):	$(OBJS) $(MAIN_OBJ)
 	@make -C libft/
 	@make -C mlx/
 	@printf "$(GREEN)Linking $(NAME)... %45s\r$(NO_COLOR)" " "
-	@$(CC) $(FLAGS) $(OBJS) $(MAIN_OBJ) libft/libft.a -o $(NAME)
+	@$(CC) $(FLAGS) $(OBJS) $(MAIN_OBJ) libft/libft.a mlx/libmlx.a $(OPENGL_APPKIT) -o $(NAME)
 	@echo "\n$(GREEN)$(BOLD)Enjoy!$(BOLD_OFF)$(NO_COLOR)"
 
 $(BONUS_NAME): $(OBJS) $(BONUS_OBJ) $(BONUS_MAIN_OBJ)
 	@make -C libft/
 	@make -C mlx/
 	@printf "$(GREEN)Linking $(BONUS_NAME)... %45s\r$(NO_COLOR)" " "
-	@$(CC) $(FLAGS) $(OBJS) $(BONUS_OBJ) $(BONUS_MAIN_OBJ) libft/libft.a -o $(BONUS_NAME)
+	@$(CC) $(FLAGS) $(OBJS) $(BONUS_OBJ) $(BONUS_MAIN_OBJ) libft/libft.a mlx/libmlx.a $(OPENGL_APPKIT) -o $(BONUS_NAME)
 	@echo "\n$(GREEN)$(BOLD)Enjoy!$(BOLD_OFF)$(NO_COLOR)"
 
 clean:
@@ -102,7 +98,7 @@ clean:
 
 fclean:	clean
 	@make eclean -C libft/
-	@echo "$(RED)Deleting executables...$(NO_COLOR)"
+	@echo "$(RED)Deleting executable...$(NO_COLOR)"
 	@rm -f $(NAME) $(BONUS_NAME)
 
 re: fclean all
