--- a/pipex/libft/Makefile
+++ b/pipex/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: bvercaem <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/05/23 15:19:16 by bvercaem          #+#    #+#              #
-#    Updated: 2023/05/25 16:04:47 by bvercaem         ###   ########.fr        #
+#    Updated: 2023/08/18 12:54:09 by bvercaem         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -29,17 +29,25 @@ CLEAN_LIBS			=	$(addsuffix .clean,$(STATIC_WD))
 
 #-------------------COLORS-----------------------
 
+UNAME_S			=	$(shell uname -s)
+
+ifeq ($(UNAME_S),Linux)	# colors for linux
+RED				=	\033[0;31m
+YELLOW			=	\033[1;33m
+GREEN			=	\033[0;32m
+NO_COLOR		=	\033[0m
+BOLD			=	\033[1m
+BOLD_OFF		=	\033[0m
+
+else					# colors for mac
 RED				=	\x1b[31m
-
 YELLOW			=	\x1b[33m
-
 GREEN			=	\x1b[32m
-
 NO_COLOR		=	\x1b[0m
-
 BOLD			= 	\x1b[1m
-
 BOLD_OFF		=	\x1b[21m
+
+endif
 
 #-------------------RULES-----------------------
 
@@ -49,10 +57,10 @@ $(NAME): $(STATIC_WD)
 	@echo "$(GREEN)$(BOLD)Enjoy!\n$(BOLD_OFF)$(NO_COLOR)"
 
 $(STATIC_WD):
-	make -C $@
+	@make -C $@
 
 $(CLEAN_LIBS): %.clean:
-	make clean -C $*
+	@make clean -C $*
 
 clean: $(CLEAN_LIBS)
 
