so_long: getting a seg fault in mlx_xpm_file_to_image

--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -38,8 +38,11 @@ BONUS_MAIN		=	$(BONUS_WD)main_bonus.c
 
 SRCS			=	$(SOURCES_WD)sl_error.c \
 					$(SOURCES_WD)sl_map_gen.c \
+					$(SOURCES_WD)sl_map_checks.c \
 					$(SOURCES_WD)sl_map_solvable.c \
 					$(SOURCES_WD)sl_load_sprites.c \
+					$(SOURCES_WD)sl_mlx_init.c \
+					$(SOURCES_WD)sl_render_map.c \
 
 BONUS_SRC		=	$(BONUS_WD)___ _bonus.c
 
