so_long: succesfully rendered a map

--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -43,6 +43,7 @@ SRCS			=	$(SOURCES_WD)sl_error.c \
 					$(SOURCES_WD)sl_load_sprites.c \
 					$(SOURCES_WD)sl_mlx_init.c \
 					$(SOURCES_WD)sl_render_map.c \
+					$(SOURCES_WD)sl_key_hooks.c \
 					$(SOURCES_WD)sl_flush.c \
 
 BONUS_SRC		=	$(BONUS_WD)___ _bonus.c
