so_long: knights patrol horizontally and hitreg works and immunity works

--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -6,7 +6,7 @@
 #    By: bvercaem <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/08/31 14:06:40 by bvercaem          #+#    #+#              #
-#    Updated: 2023/09/25 14:28:46 by bvercaem         ###   ########.fr        #
+#    Updated: 2023/09/25 16:09:09 by bvercaem         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -68,6 +68,7 @@ SRCS			=	$(SOURCES_WD)sl_error.c \
 					$(SOURCES_WD)sl_print_clbl.c \
 					$(SOURCES_WD)sl_mlx_loop.c \
 					$(SOURCES_WD)sl_movement.c \
+					$(SOURCES_WD)sl_enemies.c \
 					$(SOURCES_WD)sl_map_updates.c \
 					$(SOURCES_WD)sl_player_size.c \
 					$(SOURCES_WD)sl_end_screen.c \
