so_long: added hit red-out, cleaned up messages on small windows, added maps: 42 and levels 1 through 3

--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -6,7 +6,7 @@
 #    By: bvercaem <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/08/31 14:06:40 by bvercaem          #+#    #+#              #
-#    Updated: 2023/09/25 16:09:09 by bvercaem         ###   ########.fr        #
+#    Updated: 2023/09/26 17:16:02 by bvercaem         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -67,6 +67,7 @@ SRCS			=	$(SOURCES_WD)sl_error.c \
 					$(SOURCES_WD)sl_print_util.c \
 					$(SOURCES_WD)sl_print_clbl.c \
 					$(SOURCES_WD)sl_mlx_loop.c \
+					$(SOURCES_WD)sl_timed_loop.c \
 					$(SOURCES_WD)sl_movement.c \
 					$(SOURCES_WD)sl_enemies.c \
 					$(SOURCES_WD)sl_map_updates.c \
