--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -6,7 +6,7 @@
 #    By: bvercaem <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/08/31 14:06:40 by bvercaem          #+#    #+#              #
-#    Updated: 2023/09/26 17:16:02 by bvercaem         ###   ########.fr        #
+#    Updated: 2023/09/27 17:23:14 by bvercaem         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -70,6 +70,7 @@ SRCS			=	$(SOURCES_WD)sl_error.c \
 					$(SOURCES_WD)sl_timed_loop.c \
 					$(SOURCES_WD)sl_movement.c \
 					$(SOURCES_WD)sl_enemies.c \
+					$(SOURCES_WD)sl_add_cr.c \
 					$(SOURCES_WD)sl_map_updates.c \
 					$(SOURCES_WD)sl_player_size.c \
 					$(SOURCES_WD)sl_end_screen.c \
