so_long: ait full norm compliant except for comment in main

--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -6,7 +6,7 @@
 #    By: bvercaem <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/08/31 14:06:40 by bvercaem          #+#    #+#              #
-#    Updated: 2023/09/28 19:09:21 by bvercaem         ###   ########.fr        #
+#    Updated: 2023/10/03 17:33:31 by bvercaem         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -55,6 +55,7 @@ SRCS			=	$(SOURCES_WD)sl_error.c \
 					$(SOURCES_WD)sl_list_util.c \
 					$(SOURCES_WD)sl_load_sprites.c \
 					$(SOURCES_WD)sl_load_animations.c \
+					$(SOURCES_WD)sl_load_animations_util.c \
 					$(SOURCES_WD)sl_clear_sprites.c \
 					$(SOURCES_WD)sl_clear_animations.c \
 					$(SOURCES_WD)sl_mlx_init.c \
