added state_lock mutex, added lock_and_check and lock_and_print, put mutex locks on every print so nothing is printed after a death, even philosophers now start of by waiting so they are out of sync with the others, removed the fork strategy, norm compliant

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -27,6 +27,7 @@ SRCS			=	$(SOURCES_WD)ph_atoi.c \
 					$(SOURCES_WD)ph_flush.c \
 					$(SOURCES_WD)ph_reaper.c \
 					$(SOURCES_WD)ph_msleep.c \
+					$(SOURCES_WD)ph_eating.c \
 
 #-------------------OBJECTS----------------------
 
